--- a/app.json
+++ b/app.json
@@ -6,7 +6,9 @@
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "assetBundlePatterns": ["**/*"]
+    "assetBundlePatterns": ["**/*"],
+    "updates": {
+      "enabled": false
+    }
   }
 }
