--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "server": "node server/index.js"
   },
   "dependencies": {
     "expo": "~48.0.0",
@@ -19,6 +20,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-gesture-handler": "~2.9.0",
-    "@expo/vector-icons": "^13.0.0"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "expo-linear-gradient": "~12.1.2"
   }
 }
