--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "server": "node server/index.js"
   },
   "dependencies": {
-    "expo": "~48.0.0",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/bottom-tabs": "^6.5.8",
-    "@react-navigation/stack": "^6.3.17",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-gesture-handler": "~2.9.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
-    "expo-linear-gradient": "~12.1.2"
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
+    "expo": "~48.0.0",
+    "expo-font": "^14.0.9",
+    "expo-linear-gradient": "~12.1.2",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   }
 }
